# NextShop-E-commerce-App-with-AI-Assistant

./: .gitignore  AI_SETUP_GUIDE.md  Detaieled specificaion doc.md  Detailed specificaion doc.md  NEXTSHOP_API_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  backend_express_mcp_langchain_aiservice_spec.md  dev-start.bat  dev-start.sh  dev-watch.bat  llm server detailed specification doc.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.bat  setup.sh  test_ai_server.json  turbo.json
apps/backend/: package.json  (+1 more)
services/ai-server/: .env.example  .gitignore  Makefile  README.md  TRANSFORMATION_SUMMARY.md  dev.py  download_models.py  init_config.py  install.py  main.py  pyproject.toml  quick_test.py  requirements.txt  run.bat  run.ps1  run.py  setup.ps1  simple_test.py  start.bat  start.ps1  test_api.py  test_backend_fixed.py  test_backend_integration.py  test_basic.py  test_categories.py  test_dynamic.py  test_fixed_backend.py  test_fixed_query.py  test_import.py  test_jackets.py  test_llm_direct.py  test_mixed_intent.py  test_model_init.py  test_nextshop.py  test_nextshop_integration.py  test_product_items.py  test_separation.py  test_server_complete.py  test_simple.py  test_startup.py  (+1 more)
services/ai-server/app/: agent.py  config.py  config_manager.py  execution_planner.py  main.py  models.py  schemas.py  test_module.py  tools.py  utils.py
services/ai-server/app/api/: endpoints.py
services/ai-server/app/controllers/: ai_controller.py  config_controller.py  health_controller.py
services/ai-server/app/core/: config.py  config_manager.py  exceptions.py
services/ai-server/app/routes/: config.py  health.py  reasoning.py
services/ai-server/app/services/: ai_service.py  api_service.py  model_service.py
services/ai-server/app/utils/: logger.py
services/ai-server/configs/: nextshop.json  nextshop.yaml
services/ai-server/tests/: README.md  conftest.py  test_api.py
(+190 files in other folders)
